# lumolog

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: ideas.md
docs/plans/: 2026-02-08-lumolog-cli-log-viewer.md
docs/superpowers/plans/: 2026-03-27-ai-analyze-mode.md
docs/superpowers/specs/: 2026-03-27-ai-analyze-mode-design.md
src/: ai.rs  app.rs  command.rs  filter.rs  highlighter.rs  lib.rs  main.rs  parser.rs  source.rs  timeindex.rs  ui.rs
testdata/: generate_demo_log.py
tests/: ai_test.rs  app_test.rs  cli_test.rs  filter_test.rs  highlighter_test.rs  parser_test.rs  pipeline_test.rs  source_test.rs  test_helpers.rs  timeindex_test.rs
