[package]
name = "lumolog"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.57", features = ["derive"] }
crossterm = "0.29.0"
memmap2 = "0.9.9"
ratatui = "0.30.0"
regex = "1.12.3"
open = "5"
nucleo-matcher = "0.3"
serde_json = "1.0.149"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
arboard = "3"

[dev-dependencies]
tempfile = "3.24.0"
