[package]
name = "lumolog"
version = "0.1.0"
edition = "2024"
description = "A terminal log viewer that understands your logs"
license = "MIT"
repository = "https://github.com/HopperShell/lumolog"
keywords = ["logs", "tui", "terminal", "viewer", "cli"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.57", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["use-dev-tty"] }
memmap2 = "0.9.9"
ratatui = "0.30.0"
regex = "1.12.3"
open = "5"
nucleo-matcher = "0.3"
serde_json = "1.0.149"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
arboard = "3"
libc = "0.2.181"

[dev-dependencies]
tempfile = "3.24.0"
